--- a/Prueba/styles/style.css
+++ b/Prueba/styles/style.css
@@ -3,7 +3,30 @@ html {
 
 }
 
+body {
+    background-color: greenyellow;
+}
+
+h1 {
+    background-color: blueviolet;
+}
+
+p {
+    background-color: aliceblue;
+}
+
 img {
  width: 45%;
  height: 45%;
+}
+
+.botonatras {
+    font-size: 200px;
+    background-color: white;
+    
+}
+
+.botonatras:hover {
+    background-color: aqua;
+    color: red;
 }
