--- a/c2-desenvolupamentfrontend/htmlcss/act1/styles/stylepostresemana.css
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/styles/stylepostresemana.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(255, 251, 243);
+    font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
     background-color: rgb(250, 223, 172);
