--- a/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/styles/index.css
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/styles/index.css
@@ -1,3 +1,50 @@
 body {
+    /* Texto */
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h1 {
+    /* Texto */
+    text-align: center;
+    font-weight: normal;
+    letter-spacing: 5px;
+}
+
+h2 {
+    /* Elemento */
+    padding-top: 5px;
+    display: block;
+    /* Texto */
+    color: rgb(148, 221, 39);
+    /* Borde */
+    border-bottom-style: solid;
+    border-color: rgb(188, 252, 123);
+    border-width: 1px;
+}
+
+main {
+    /* Elemento */
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+div {
+    /* Elemento */
+    display: block;
+    padding-left: 15px;
+    padding-right: 15px;
+    /* Borde */
+    border-style: solid;
+    border-color: rgb(190, 190, 190);
+    border-width: 1px;
+}
+
+.h1verde {
+    /* Texto */
+    color: rgb(40, 182, 40);
+}
+
+.h1naranja {
+    /* Texto */
+    color: rgb(226, 152, 15);
 }
