--- a/c2-desenvolupamentfrontend/htmlcss/layout/google.html
+++ b/c2-desenvolupamentfrontend/htmlcss/layout/google.html
@@ -37,7 +37,7 @@
                 <img class="mic" src="./img/mic.png" alt="Lupa">
             </form>
             
-            <div>
+            <div id="botonesbusqueda">
                 <button>Buscar con Google</button>
                 <button>Voy a tener suerte</button>
             </div>
@@ -61,9 +61,11 @@
 
             <div id="pie-abajo">
                 <div id="pa-izq">
-                    <a href="">Publicidad</a>
-                    <a href="">Empresa</a>
-                    <a href="">Cómo funciona la Búsqueda</a>
+                    <p>
+                        <a href="">Publicidad</a>&nbsp&nbsp&nbsp
+                        <a href="">Empresa</a>&nbsp&nbsp&nbsp
+                        <a href="">Cómo funciona la Búsqueda</a>&nbsp&nbsp&nbsp
+                    </p>
                 </div>
 
                 <div id="pa-centro">
@@ -74,9 +76,11 @@
                 </div>
 
                 <div id="pa-der">
-                    <a href="">Privacidad</a>
-                    <a href="">Términos</a>
-                    <a href="">Configuración</a>
+                    <p>
+                        <a href="">Privacidad</a>&nbsp&nbsp&nbsp
+                        <a href="">Términos</a>&nbsp&nbsp&nbsp 
+                        <a href="">Configuración</a>
+                    </p>
                 </div>
             </div>
         </div>
