--- a/c2-desenvolupamentfrontend/htmlcss/layout/netflix.html
+++ b/c2-desenvolupamentfrontend/htmlcss/layout/netflix.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <!-- Menu de cabecera con links de interés y perfil -->
         <div id="head">
             <div id="barra-izq">
                 <img src="./img/Logonetflix.png" alt="logo netflix barra" class="logonetflix">
@@ -19,17 +20,50 @@
                 <a href="">Mi lista</a>
             </div>
             <div id="barra-der">
-                <img src="./img/lupa.png" alt="">
+                <img src="./img/lupablanca.png" alt="">
                 <img src="./img/present.png" alt="">
                 <img src="./img/bellnoti.png" alt="">
                 <img src="./img/istockphoto-1337144146-612x612.png" alt="">
             </div>
         </div>
+
+        <!-- Todo el contenido de series y peliculas -->
         <div id="main">
+            <div class="titulosslides">
+                Volver a ver
+            </div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABa_BOv2YGLt-LZF7eZ8sOrSpy-8nDeUDBD2ZRRzATg4hcQyjYNfZmf_X2j1RFJGLQNR_dNNhItcMaN891oEd2bAgjBU7dq0sVu_9RMnJBLKTpuDzDXP_qjC7SD8H53-nzwcP.jpg?r=daa" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABXeeKbX0nIqkLb5xcLTLpW9Y6nahUXdJ38r2X82t2XMyc75g1bHIKGh-u2bWpC8KV_qd0G7-nPulOeK2g456ijEft_Qkncdf7S5_Y3m5X2VPe0dBTvw8oivT395AAYro2yRJ.jpg?r=cba" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABUwPC8Yv-z0Ocm_AXQHQV9KppsoJJESV78RWmzj1tzC9qJpF3FrZe9KTLQ7nU3PsaVEQpUvijFWeCJlSLZS5GxGFVtS26qEY1xGciIM4ubJ3UMGQ0aMAgQ_8Q1Hf1NOApeAR.jpg?r=578" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABUs1fc0IQFDT9RfgKKFtd--Gt7EagzjwmpV__OYugPLmN8xDm7AaYuaJHwqNzoaWNmpvCiOaLHcXDKB6FP37HUOkySQRR3UbjjYopRC9yRBsc_vPK39pG2bn1o7rGyPkntoH.jpg?r=8d8" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABYxip-IGr9DwUMBkFF9iroatVSXU2c_O2PsP_0H7sEqB323N0vkNgnCwJ2lB7y2PPtI_YCNkjy6M4CeB9szUhfCsGzrY1QF6DMh32rGDKqojztLWD7-3zx34BRiCyemYDpMn.jpg?r=d08" alt=""></div>
+            
+            <div class="titulosslides">
+                Terror
+            </div>
+            <div class="contenedorimagenes"><img src="http://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABbGmOTw4xe-wDkIGAl2Kk9IY7G6jviJLZnRUJdu5189spQvqu3HC0yp127rgNB9dlzbdRhdU5b3QdtEeI47Sjd0f8mG6BThTaXbIIQtWUKTXXwC1cSmUGToriSLdTMRiwvdO.jpg?r=a09" alt=""></div>
+            <div class="contenedorimagenes"><img src="http://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABbmQiS40GATgW9KyQCqpQUkf5T0yQ6pGgWltvgW7LNwLo4cobVJkMEIez3TYuetryIySeHyHVTYim5XpibtA_ModC8uIazW7qjkRxCP-vacTBcT58ykW97etg2r5xiZYACQe.jpg?r=e83" alt=""></div>
+            <div class="contenedorimagenes"><img src="http://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABbNVkwsX6Pv9SEuFPwTaICRm3MWw569S4bSxU0u_nswNBmjmunn6Eh7nj4KRMBfT2xUfwnZfHLRs_FQRSDs8wHZavm0hukt-kGc.webp?r=7ee" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABRaFQVf1OmD8HqeQXMRAWTaBoFIjcMdTJb-TxAnpGWnaTyvju3ZfriqtfQ7tSF0nFpNv8gCoSGFBNuDgSm2v4b1CQRY0qpFSOcI6w1jmBwdBAIbJEM3MDtB9qhqGihKMZibb.jpg?r=194" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABQX6BV7dOLGmr62tdBDxctiy5VvZlh30Dfad73BOQavsbKqDQ1wBa5kU7ie__HeCfk8PlD5WaG1v-T7jQYH78VSrg4qzGovCQ_N-HEgu4-JQ5QTE3kFJCB5L2TxmGvW_ha0g.jpg?r=8c7" alt=""></div>
 
+            <div class="titulosslides">
+                Anime
+            </div>
+            <div class="contenedorimagenes"><img src="http://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABXGUKlgbEHrtcUxQru1KyvS-9V5BptPfTAK-HFt2hVt-VgGWIaA_LSEIyIy4o-W73R9k1ZVdvrOaxSpYVC3UHo0R17NtPTYvKNI.webp?r=0f3" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABfxXDSlZcjMznA9fQI9Jd7Xpz79oDo9G504sG2rw9EcWULqYcmpdGNkw7AhfYVxoWWCHXukvKUGlJOAbC-JjkX9Q0gdwckNCQDU.webp?r=993" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABY31xkrEBnGFlCWNR-ObH5YymkGrLcia3HilENwOqqFz8CylLjWKZu1lbampvxvkQ2ALTV5pndbpEHOXyEU7G8WBnRw5ejYjT0o.webp?r=db0" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABTrtJQvcIiVQ6t9yG7-0aXzWgJNtHOYZ4hROBlihE4oKHAVS28e3L3rNdixxaqlbqihjsbBY5VSRQey9FzNdMYoE3FibttU3PQ8.webp?r=5e8" alt=""></div>
+            <div class="contenedorimagenes"><img src="https://occ-0-4695-358.1.nflxso.net/dnm/api/v6/6gmvu2hxdfnQ55LZZjyzYR4kzGk/AAAABWNH-hIZFIVpjJq_zK5nLTIBaSA5EevzIztOOcyHxGb2M1NxBv8X-3GsDqU11bXZEbLR_f_r8_44U6QOogH_xiYAinOmV_Ti-u8.webp?r=bfe" alt=""></div>
+            
         </div>
-        <div id="foot">
 
+        <!-- Footer con botones a redes sociales -->
+        <div id="foot">
+            <img src="./img/facebook.png" alt="facebook">
+            <img src="./img/twitter.png" alt="Twitter">
+            <img src="./img/youtube.png" alt="Youtube">
+            <img src="./img/instagram.png" alt="Instagram">
         </div>
     </div>
 </body>
