--- a/c2-desenvolupamentfrontend/htmlcss/layout/styles/netflix.css
+++ b/c2-desenvolupamentfrontend/htmlcss/layout/styles/netflix.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    background-color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
 }
 
 #container {
@@ -10,12 +11,13 @@ body {
 
 #head {
     display: flex;
-    padding: 10px;
-    background-color: black;
+    height: 10vh;
 }
 
 #barra-izq, #barra-der {
     display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
     width: 50vw;
     align-items: center;    
 }
@@ -24,7 +26,7 @@ body {
     margin-right: 10px;
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 #barra-izq > a:hover {
@@ -43,11 +45,38 @@ body {
 
 #main {
     display: grid;
+    height: 83vh;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr 3fr 1fr 3fr;
+    grid-gap: 5px;
+    color: white;
+    font-size: 20px;
+    font-weight: bolder;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 2vh;
+}
+
+#main > div > img {
+    max-height: 100%;
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+#foot {
+    display: flex;
+    height: 5vh;
+    align-items: center;
+    padding-left: 20px;
+}
+
+#foot > img {
+    height: 3vh;
+    width: 2vw;
+    margin-right: 10px;
 }
 
 .barra {
-    background-color: brown;
     color: white;
 }
 
@@ -55,4 +84,16 @@ body {
     width: 125px;
     height: 40px;
     margin-right: 40px;
+}
+
+.titulosslides {
+    display: flex;
+    grid-column: 1/6;
+    align-items: end;
+}
+
+.contenedorimagenes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
