--- a/c2-desenvolupamentfrontend/htmlcss/layout/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/layout/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
+    <link rel="stylesheet" href="../styleindex.css">
 </head>
 <body>
-    <a href="./google.html">Gl00gl3</a>
-    <a href="./bing.html">Bing</a>
-    <a href="./netflix.html">Netflix</a>
+    <button><a href="./google.html">Gl00gl3</a></button>
+    <button><a href="./bing.html">Bing</a></button>
+    <button><a href="./netflix.html">Netflix</a></button>
 </body>
 </html>
