--- a/c2-desenvolupamentfrontend/htmlcss/layout/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/layout/index.html
@@ -10,5 +10,6 @@
     <button><a href="./google.html">Gl00gl3</a></button>
     <button><a href="./bing.html">Bing</a></button>
     <button><a href="./netflix.html">Netflix</a></button>
+    <button><a href="../">Atras</a></button>
 </body>
 </html>
